alteração para o fly

--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,10 @@ app = 'compilador-token-ruby'
 primary_region = 'gru'
 
 [build]
+  builder = "heroku/buildpacks:20"
+
+[processes]
+  web = "bundle exec rackup -p 8080 -o 0.0.0.0"  
 
 [http_service]
   internal_port = 4567
