--- a/fly.toml
+++ b/fly.toml
@@ -3,25 +3,23 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'compilador-token-ruby'
-primary_region = 'gru'
+app = "compilador-token-ruby"
+primary_region = "gru"
 
 [build]
   builder = "heroku/buildpacks:20"
 
 [processes]
-  web = "bundle exec rackup -p 8080 -o 0.0.0.0"  
+  web = "bundle exec rackup -p 8080 -o 0.0.0.0"
 
 [http_service]
-  internal_port = 4567
+  internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = "stop"
   auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+  processes = ["web"]
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
+  cpu_kind = "shared"
   cpus = 1
   memory_mb = 1024
